# imxiangqi

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  settings.ini
scripts/: build.sh
src/: font_awesome.hpp  font_awesome_icons.hpp  main.cpp
src/core/: Board.cpp  Board.hpp  GameSettings.cpp  GameSettings.hpp  GameState.cpp  GameState.hpp  Move.cpp  Move.hpp  MoveNotation.cpp  MoveNotation.hpp  Piece.cpp  Piece.hpp
src/engine/: EngineController.cpp  EngineController.hpp  EngineLog.cpp  EngineLog.hpp  EnginePool.cpp  EnginePool.hpp  EngineProcess.cpp  EngineProcess.hpp  EngineProtocol.cpp  EngineProtocol.hpp  EngineSettings.hpp  EngineTypes.hpp
src/renderer/: BoardRenderer.cpp  BoardRenderer.hpp  TextureManager.cpp  TextureManager.hpp
src/ui/: AppContext.hpp  BoardPanel.cpp  BoardPanel.hpp  ControlPanel.cpp  ControlPanel.hpp  EngineLogPanel.cpp  EngineLogPanel.hpp  EngineSettingsPanel.cpp  EngineSettingsPanel.hpp  IPanel.hpp  MoveHistoryPanel.cpp  MoveHistoryPanel.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsPanel.cpp  SettingsPanel.hpp  StatusPanel.cpp  StatusPanel.hpp
